Fix button jadwal sementara visibility

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,7 +15,7 @@ $yellow5: #f7d316;
 $border-color: rgba(0, 0, 0, 0.125);
 
 $gradient-navy-blue: linear-gradient(120deg, #2c3e50, #00478c);
-$gradient-yellow: linear-gradient(120deg, #f7d316 , #ffff00);
+$gradient-yellow: linear-gradient(120deg, $yellow5 , $yellow3);
 $gradient-yellow-dark: linear-gradient(120deg, #c5a912 , #d6d601);
 $gradient-red: linear-gradient(120deg, #93291E, #ED213A);
 $gradient-red-dark: linear-gradient(120deg, #611a13, #bb182c);
